# sai-cookbook

./: .gitignore  README.md  pyproject.toml  req-details.txt  requirements.txt
examples/knowledge-assistant/: README.md
examples/knowledge-assistant/backend/: .env.example  README.md  pyproject.toml  requirements.txt
examples/knowledge-assistant/backend/app/: main.py  rag_agent.py
examples/knowledge-assistant/backend/app/api/v1/: health.py  queries.py  vector_stores.py
examples/knowledge-assistant/backend/app/config/: settings.py
examples/knowledge-assistant/backend/app/core/: __init__.py  logging.py
examples/knowledge-assistant/backend/app/models/: __init__.py  schemas.py
examples/knowledge-assistant/backend/app/services/: __init__.py  rag_service.py  vector_store_service.py
examples/knowledge-assistant/frontend-streamlit/: README.md  app.py  pyproject.toml  requirements.txt
examples/openai_agents_python_sdk/: Hello_world_example.ipynb  RAG_agent_with_File_Search_Responses_API.ipynb
examples/openai_python_sdk/: RAG_with_File_Search_Responses_API.ipynb
