[project]
name = "sai-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.8"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "openai>=2.7.1",
    "openai-agents>=0.5.0",
    "pypdf>=6.1.3",
]
